@@ -2,6 +2,7 @@ From: Miao Wang <shankerwangmiao@gmail.com>
 Date: Sun, 4 Jan 2026 21:22:04 +0800
 Subject: Add feature test system
 
+Forwarded: not-needed
 ---
  hinic/Makefile                   | 34 ++++++++++++++++++++++++++++++++++
  hinic/feature_test_always_true.c |  5 +++++
