@@ -2,6 +2,7 @@ From: Miao Wang <shankerwangmiao@gmail.com>
 Date: Thu, 10 Jul 2025 22:54:25 +0800
 Subject: Fix build error when CONFIG_VLAN_8021Q is not enabled
 
+Forwarded: no
 ---
  hinic/hinic_main.c | 4 ++++
  1 file changed, 4 insertions(+)
