@@ -2,6 +2,7 @@ From: Miao Wang <shankerwangmiao@gmail.com>
 Date: Fri, 11 Jul 2025 00:52:08 +0800
 Subject: Fix build error for API change in netif_napi_add
 
+Forwarded: not-needed
 ---
  hinic/Makefile                          |  2 ++
  hinic/feature_test_napi_add_tx_weight.c | 10 ++++++++++
