@@ -2,6 +2,7 @@ From: Miao Wang <shankerwangmiao@gmail.com>
 Date: Sun, 4 Jan 2026 21:24:33 +0800
 Subject: Fix build error for API change in GRO and NAPI layer
 
+Forwarded: not-needed
 ---
  hinic/Makefile                               | 2 ++
  hinic/feature_test_napi_gro_flush_in_gro_h.c | 8 ++++++++
